syntax = "proto3";

package userpb;

option go_package = "userpb/";



service UserService {
    rpc RegisterUser (RegisterRequest) returns (RegisterResponse);
    rpc GetUser (UserRequest) returns (UserResponse);
}

message RegisterRequest {
    string username = 1;
}

message RegisterResponse {
    uint32 user_id = 1;
}

message UserRequest {
    uint32 user_id = 1;
}

message UserResponse {
    uint32 user_id = 1;
    string username = 2;
    int32 rating = 3;
    string created_at = 4;
}
